# swipePredictor

./: .gitmodules  Cargo.toml  Makefile  README.md
apps/mac/: Makefile  project.yml
apps/mac/Sources/SwipeTypeMac/App/: AppDelegate.swift  AppSettings.swift  AppState.swift  SwipeTypeMacApp.swift
apps/mac/Sources/SwipeTypeMac/Engine/: SwipeEngine.h  SwipeEngineBridge.swift
apps/mac/Sources/SwipeTypeMac/Services/: PermissionManager.swift  TextInsertionService.swift
apps/mac/Sources/SwipeTypeMac/Views/: ContentView.swift  OverlayPanel.swift  SettingsView.swift
apps/mac/Support/: Info.plist
apps/mac/SwipeTypeMac.xcodeproj/: project.pbxproj
apps/web/: Cargo.toml
apps/web/src/: lib.rs
apps/web/www/: index.html
crates/swipe-engine/: Cargo.toml
crates/swipe-engine/src/: dtw.rs  ffi.rs  keyboard.rs  lib.rs  types.rs  wasm.rs
scripts/: release.sh
src/: lib.rs  main.rs
