[package]
name = "swipe-engine"
version.workspace = true
edition.workspace = true

[lib]
crate-type = ["lib", "staticlib", "cdylib"]

[features]
default = []
wasm = ["wasm-bindgen"]
ffi = ["once_cell"]

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
wasm-bindgen = { workspace = true, optional = true }
once_cell = { version = "1.19", optional = true }
